# qt0921

./: CMakeLists.txt  README.md  main.cpp
func/: aboutPage.cpp  aboutPage.h  clearPage.cpp  clearPage.h  editPage.cpp  editPage.h  historyPage.cpp  historyPage.h  homePage.cpp  homePage.h  loadPage.cpp  loadPage.h  loginPage.cpp  loginPage.h  powerPage.cpp  powerPage.h  registerPage.cpp  registerPage.h  setPage.cpp  setPage.h  sysPage.cpp  sysPage.h  testPage.cpp  testPage.h  wifiPage.cpp  wifiPage.h
gui/: about.h  about.ui  clear.h  clear.ui  edit.h  edit.ui  history.h  history.ui  home.h  home.ui  loading.h  loading.ui  login.h  login.ui  power.h  power.ui  register.h  register.ui  set.h  set.ui  sys.h  sys.ui  test.h  test.ui  wifi.h  wifi.ui
inf/: cameraThread.cpp  cameraThread.h  dbThread.cpp  dbThread.h  serialThread.cpp  serialThread.h
